cm4all-beng-proxy (0.6.3) unstable; urgency=low

  * http-server: implemented the DELETE method
  * http-server: refuse HTTP/0.9 requests
  * proxy-handler: send request body to template when no widget is focused
  * widget-request: pass original HTTP method to widget

 --

cm4all-beng-proxy (0.6.2) unstable; urgency=low

  * lock: fixed race condition in debug flag updates
  * session: use rwlock for the session manager
  * proxy-handler: pass request headers to the remote HTTP server
  * proxy-handler: forward original Accept-Charset if processor is disabled
  * pipe: don't filter resources without a body
  * fcache: forward original HTTP status over "pipe" filter
  * cgi: support the "Status" line

 -- Max Kellermann <mk@cm4all.com>  Mon, 06 Jul 2009 16:38:26 +0200

cm4all-beng-proxy (0.6.1) unstable; urgency=low

  * session: consistently lock all session objects
  * rewrite-uri: check if widget_external_uri() returns NULL
  * widget-uri: don't generate the "path" argument when it's NULL
  * widget-uri: strip superfluous question mark from widget_base_address()
  * widget-uri: append parameters from the template first
  * widget-uri: re-add configured query string in widget_absolute_uri()
  * widget-uri: eliminate configured query string in widget_external_uri()
  * processor: don't consider session data for base=child and base=parent

 -- Max Kellermann <mk@cm4all.com>  Fri, 03 Jul 2009 15:52:01 +0200

cm4all-beng-proxy (0.6) unstable; urgency=low

  * inline-widget: check the widget HTTP response status
  * response: don't apply transformation on failed response
  * resource-address: include pipe arguments in filter cache key
  * handler: removed session redirect on the first request
  * http-cache: accept ETag response header instead of Last-Modified
  * filter-cache: don't require Last-Modified or Expires
  * file-handler: disable ETag only when processor comes first
  * file-handler: read ETag from xattr
  * pipe: generate new ETag for piped resource