@@ -4,6 +4,7 @@ cm4all-beng-proxy (0.6.3) unstable; urgency=low
   * http-server: refuse HTTP/0.9 requests
   * proxy-handler: send request body to template when no widget is focused
   * widget-request: pass original HTTP method to widget
+  * session: automatically defragment sessions
 
  --
 
